// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders meta for long-living branch 1`] = `
<div
  className="navbar-context-meta"
>
  <div
    className="spacer-left text-ellipsis"
  >
    <DateTimeFormatter
      date="2017-01-02T00:00:00.000Z"
    />
  </div>
  <Tooltip
    mouseEnterDelay={0.5}
    overlay="version 0.0.1"
    placement="bottom"
  >
    <div
      className="spacer-left text-limited"
    >
      version
       
      0.0.1
    </div>
  </Tooltip>
</div>
`;

exports[`renders meta for pull request 1`] = `
<div
  className="navbar-context-meta"
>
  <div
    className="spacer-left text-ellipsis"
  >
    <DateTimeFormatter
      date="2017-01-02T00:00:00.000Z"
    />
  </div>
  <div
    className="navbar-context-meta-secondary"
  >
    <a
      className="big-spacer-right"
      href="https://example.com/pull/1234"
      rel="nofollow"
      target="_blank"
    >
      branches.see_the_pr
      <i
        className="icon-detach little-spacer-left"
      />
    </a>
    <BranchStatus
      branchLike={
        Object {
          "base": "master",
          "branch": "feature",
          "key": "1234",
          "status": Object {
            "bugs": 0,
            "codeSmells": 2,
            "qualityGateStatus": "ERROR",
            "vulnerabilities": 3,
          },
          "title": "Feature PR",
          "url": "https://example.com/pull/1234",
        }
      }
    />
  </div>
</div>
`;

exports[`renders status of short-living branch 1`] = `
<div
  className="navbar-context-meta"
>
  <div
    className="spacer-left text-ellipsis"
  >
    <DateTimeFormatter
      date="2017-01-02T00:00:00.000Z"
    />
  </div>
  <div
    className="navbar-context-meta-secondary"
  >
    <BranchStatus
      branchLike={
        Object {
          "isMain": false,
          "mergeBranch": "master",
          "name": "feature",
          "status": Object {
            "bugs": 0,
            "codeSmells": 2,
            "qualityGateStatus": "ERROR",
            "vulnerabilities": 3,
          },
          "type": "SHORT",
        }
      }
    />
  </div>
</div>
`;
